

MODDING

New Features:

- Events
	playerRevolution(ePlayer, iAnarchyTurns, leOldCivics, leNewCivics) [BULL]
- CityUtil
	Use willGrowThisTurn() and willShrinkThisTurn() instead of CyCity.getFoodTurnsLeft()
- BugUtil
	Added lookupModule() to acquire a module without looking up a function

Improvements:

- Options
	Shortcut Reminder message uses CvModName.modName instead of "BUG Mod"

Bug Fixes:

- GameUtils
	<gameutils> now auto-detects module-level handlers and listeners (omit "class")
	Fixed problem when using <callback> element to define new callbacks
	New <callback>s no longer require a default value (omit both "type" and "default")
	Logs a warning if a listener returns a value


____________________________________________________________________________________________________
BUG 4.1 released September 29th, 2009

CHANGES

New Features:

- Mac support
- Scoreboard
	Added Civilization Description option (e.g. "English Empire")
- City Screen
	Added option to show only religions and corporations present in the city plus allows for more than seven of each
	If Fractional Trade Routes is enabled, shows two decimal places for Trade Route values [BULL]
- Foreign Advisor (F4)
	TECHS: Added a status column that shows War, Forced Peace, and Refuses to Talk
- Religion Advisor (F7)
	Added option to limit the religions shown in the top area to only those that are founded or available for conversion
	Added johny smith's scrolling panel for mods with more than seven religions
	Shows new religions and religious buildings/units types from mods
- Civ4lerts
	Added Refuses to Talk alert
	Added Worst Enemy alert
	Added Resource Trade alert
	Added Map Trade alert

Improvements:

- Scoreboard
	Refuses to Talk now works without BULL
- Customizable Domestic Advisor (F1)
	Added hover help text to buttons
- MapFinder
	Added ALT + CTRL + SHIFT + G to stop
	Added separate Save path

Bug Fixes:

- BUFFY and Single-Player BUG can coexist; set NoCustomAssets to 1 in BUFFY's INI file